<resources>
    <string name="app_name">AndroidSeminar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_id">onpyeong</string>
    <string name="user_name">강수현</string>
    <string name="user_introduce">SOPT 28기 안드로이드 파트 강수현</string>

    <string name="name">이름</string>
    <string name="input_name">이름을 입력해주세요</string>
    <string name="github_id">깃허브 아이디</string>
    <string name="input_id">ID를 입력해주세요</string>
    <string name="password">비밀번호</string>
    <string name="input_password">비밀번호를 입력해주세요</string>
    <string name="sign_up">SIGNUP</string>

    <string name="login">LOGIN</string>
    <string name="sign_up_q">아이디/비밀번호가 없으신가요?</string>
    <string name="sign_up_kr"><u>회원가입</u></string>

    <string name="following_screen">팔로잉 화면</string>

    <string name="more">MORE</string>

    <string name="repo_name">레포지터리 이름</string>
    <string name="repo_disc">레포지터리 설명</string>
    <string name="repo_language">언어</string>
    <string name="logout">LOGOUT</string>
</resources>