<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/tv_repo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:ellipsize="end"
        android:maxLines="1"
        tools:text="@string/repo_name"/>

    <TextView
        android:id="@+id/tv_repo_disc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_name"
        app:layout_constraintStart_toStartOf="parent"
        android:ellipsize="end"
        android:maxLines="3"
        tools:text="@string/repo_disc"/>

    <TextView
        android:id="@+id/tv_repo_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_repo_disc"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/repo_language"/>



</androidx.constraintlayout.widget.ConstraintLayout>